--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="footer">
     <a href="index.html" class="glyphicon glyphicon-home"></a>
     <div class="searchCity">
-      <input id="nameCity" class="searchBar" type="text" name="nameCity" placeholder="v-bind:src = item.name">
+      <input id="nameCity" class="searchBar" type="text" name="nameCity" placeholder="Enter City Name">
       <button id="myBtnSearch" class="myBtn glyphicon glyphicon-search"></button>
     </div>
   </div>
